--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ script:
         - docker run -e CI=true geodumit/docker-react npm run test 
 
 deploy:
+        skip_cleanup: true
         provider: elasticbeanstalk
         region: "us-east-2"
         app: "docker-react"
